# PicoDB

./: .gitignore  Auth.h  CMakeLists.txt  CommandLineInterface  CommandLineInterface.cpp  Database.h  README.md  Table.h  dir_structure_update.md  example_example_2  example_list.txt  example_usage  test_script
examples/: example_delete.cpp  example_example2  example_example2.cpp  example_usage  example_usage.cpp  studentdb.config  tempCodeRunnerFile  tempCodeRunnerFile.cpp  test.cpp  test_fk_pk.cpp  test_update  test_update.cpp
examples/testdb/: schoolDB.config  students.csv
examples/testdb/zawadDB/: zawadDB.config
examples/zawadDB/: zawadDB.config
include/PicoDB/: Cell.h  ConfigManager.h  Database.h  Encryptor.h  FileHandler.h  Map.h  PicoDB.h  String.h  StringVectorConverter.h  Table.h  UserPermissionManager.h  Vector.h
src/: Cell.cpp  ConditionEvaluation.cpp  ConfigManager.cpp  Database.cpp  Database.h  Date.cpp  Encryption.cpp  Encryptor.cpp  FileHandler.cpp  FileUtils.cpp  ManageConfig.cpp  Map.cpp  PicoDB.cpp  String.cpp  StringVectorConverter.cpp  Table.cpp  UserPermissionManager.cpp  Vector.cpp  test_script.cpp
src/core/: Cell.cpp  ConfigManager.cpp  Database.cpp  PicoDB.cpp  Table.cpp  UserPermissionManager.cpp
src/storage/: Encryptor.cpp  FileHandler.cpp
src/utils/: Date.cpp  Map.cpp  String.cpp  StringVectorConverter.cpp  Vector.cpp
test/: basic_tests  basic_tests.cpp  configManager_test.cpp  temp.cpp  tempCodeRunnerFile  tempCodeRunnerFile.cpp  testVector  testVector.cpp  test_FileHandler.cpp  test_FileUtils  test_FileUtils.cpp  test_Map  test_Map.cpp  test_String  test_String.cpp  test_create_table.cpp  test_script  test_script.cpp  test_script2  test_script2.cpp  test_script3.cpp  vectorTest.cpp
test/bankdb/: bankdb.config
test/rapidb/: rapidb.config  studentdb.config  testdb.config
test/studentdb/: studentdb.config
test/testDB/: students.csv  teachers.csv  testdb.config
test/zawadDB/: department.csv  students.csv  teachers.csv  zawadDB.config
tests/: TMap.cpp  TString.cpp  TVector.cpp  basic_tests
tests/rapidb/: testdb.config
